--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "base-app",
+  "name": "monsters-rolodex",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,11 +11,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage": "https://bsl333.github.io/monsters-rolodex",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -27,5 +30,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
